--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bloodhound",
+  "name": "pgBloodhound",
   "version": "0.0.1",
-  "description": "introspect and generate typescript types from a postgres databases",
+  "description": "introspect and extract schema in JSON format from a postgres database",
   "main": "index.ts",
   "scripts": {
     "build": "tsc",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jasonpanosso/bloodhound.git"
+    "url": "git+https://github.com/jasonpanosso/pgBloodhound.git"
   },
   "keywords": [
     "postgres",
@@ -20,9 +20,9 @@
   "author": "Jason Panosso",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jasonpanosso/bloodhound/issues"
+    "url": "https://github.com/jasonpanosso/pgBloodhound/issues"
   },
-  "homepage": "https://github.com/jasonpanosso/bloodhound#readme",
+  "homepage": "https://github.com/jasonpanosso/pgBloodhound#readme",
   "devDependencies": {
     "@types/eslint": "^8.44.2",
     "@types/node": "^20.6.3",
