--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
+    "tozod": "^3.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "extract-pg-schema": "^4.2.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "zod": "^3.22.2"
   }
 }
